--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,14 +3,14 @@ spring:
   cache: false
 
  datasource:
-  url: jdbc:mysql://127.0.0.1:3500/admin
+  url: jdbc:mysql://127.0.0.1:3500/ecommerce
   username: root
   password: wjd0322189
   driver-class-name: com.mysql.cj.jdbc.Driver
 
  jpa:
   hibernate:
-   ddl-auto: create
+   ddl-auto: none
   properties:
    hibernate:
     format_sql: true
@@ -27,10 +27,10 @@ spring:
 
 logging:
  level:
-  root: info
+  root: trace
 
 server:
- port: 9999
+ port: 8888
 
 #apis:
 # product-graphql-api:
